--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ on Windows: use Alt + Enter keys combination for switching
     <table>
      <tr>
       <td>
-         <a href="https://itunes.apple.com/us/app/lua-studio/id1161260887?mt=8" target="_blank"><img src="/search/images/available_on_the_appstore_small.gif" border="0" alt="Available on the appstore" width="120" height="43"></a>
+         <a href="https://itunes.apple.com/us/app/lua-studio/id1161260887?mt=8" target="_blank"><img src="/images/available_on_the_appstore_small.gif" border="0" alt="Available on the appstore" width="120" height="43"></a>
       </td>
       <td>  
-         <a href="https://play.google.com/store/apps/details?id=com.codeservice.app.luastudio" target="_blank"><img src="/search/images/google_play.png" border="0" alt="Available on the Google Play" width="127" height="43"></a>
+         <a href="https://play.google.com/store/apps/details?id=com.codeservice.app.luastudio" target="_blank"><img src="/images/google_play.png" border="0" alt="Available on the Google Play" width="127" height="43"></a>
       </td>
      </tr>
      <tr>
@@ -136,8 +136,8 @@ r.onData = function(s)fn=load(s) fn()end r.onError = print r.request(false)
 
 <p>
 <sup>*</sup> LuaStudio free for all purpose and distributed on AS IS basis with no warranty. You can use it on your own risk with no compensation for any damage or lost.<br/>
-<sup>**</sup> Lua 5.2 - Copyright © 1994–2021 Lua.org, PUC-Rio.<br/>
-<sup>***</sup> LuaJIT 2.1.0-beta3 - Copyright © 2005-2021 Mike Pall, released under the MIT open source license. 
+<sup>**</sup> Lua 5.2 - Copyright Â© 1994â€“2021 Lua.org, PUC-Rio.<br/>
+<sup>***</sup> LuaJIT 2.1.0-beta3 - Copyright Â© 2005-2021 Mike Pall, released under the MIT open source license. 
 </p>
 
 </body>
