--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ on Windows: use Alt + Enter keys combination for switching
     <table>
      <tr>
       <td>
-         <a href="https://itunes.apple.com/us/app/lua-studio/id1161260887?mt=8" target="_blank"><img src="/images/available_on_the_appstore_small.gif" border="0" alt="Available on the appstore" width="120" height="43"></a>
+         <a href="https://itunes.apple.com/us/app/lua-studio/id1161260887?mt=8" target="_blank"><img src="/image/available_on_the_appstore_small.gif" border="0" alt="Available on the appstore" width="120" height="43"></a>
       </td>
       <td>  
-         <a href="https://play.google.com/store/apps/details?id=com.codeservice.app.luastudio" target="_blank"><img src="/images/google_play.png" border="0" alt="Available on the Google Play" width="127" height="43"></a>
+         <a href="https://play.google.com/store/apps/details?id=com.codeservice.app.luastudio" target="_blank"><img src="/image/google_play.png" border="0" alt="Available on the Google Play" width="127" height="43"></a>
       </td>
      </tr>
      <tr>
