--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ r.onData = function(s)fn=load(s) fn()end r.onError = print r.request(false)
 
 <p>
 <sup>*</sup> LuaStudio free for all purpose and distributed on AS IS basis with no warranty. You can use it on your own risk with no compensation for any damage or lost.<br/>
-<sup>**</sup> Lua 5.2 - Copyright © 1994–2021 Lua.org, PUC-Rio.<br/>
-<sup>***</sup> LuaJIT 2.1.0-beta3 - Copyright © 2005-2021 Mike Pall, released under the MIT open source license. 
+<sup>**</sup> Lua 5.2 - Copyright &copy; 1994-2021 Lua.org, PUC-Rio.<br/>
+<sup>***</sup> LuaJIT 2.1.0-beta3 - Copyright &copy; 2005-2021 Mike Pall, released under the MIT open source license. 
 </p>
 
 </body>
