--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ on Windows: use Alt + Enter keys combination for switching
      <tr>
        <td></td>
        <td>
-         <a href="download/LuaStudio-release_v2_2_0.apk">LuaStudio-release_v2_2_0.apk</a>
+         <a href="https://github.com/luastudio/Release_And/releases/download/2.2.0/LuaStudio-release_v2_2_0.apk">LuaStudio-release_v2_2_0.apk</a>
        </td>
      </tr>
     </table>
