Update exporter info

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ on Mac: use default top left icon for full screen resizing<br/>
 on Windows: use Alt + Enter keys combination for switching 
 </p>
 
-<p style="color:navy;'">Current version <b>2.2.0 / 2.3.0</b></p>
+<p style="color:navy;'">Current version <b>2.3.0</b></p>
 <table>
 <tr>
   <td valign="top"><b>Mobile version</b></td>
@@ -104,7 +104,7 @@ on Windows: use Alt + Enter keys combination for switching
   <td valign="top"><b>Exporter</b></td>
   <td width="3">&nbsp;</td>
   <td>
-    <a href="https://github.com/luastudio/Exporter/releases/download/1.13/Exporter_v13_0.luastudio" target="_blank">Exporter_v13_0.luastudio</a> (215MB)
+    <a href="https://github.com/luastudio/Exporter/releases/download/14.0/Exporter_v14_0.luastudio" target="_blank">Exporter_v14_0.luastudio</a> (209MB)
   </td>
 </tr>
 <tr>
