Initial update for 2.4.0 release

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ on Mac: use default top left icon for full screen resizing<br/>
 on Windows: use Alt + Enter keys combination for switching 
 </p>
 
-<p style="color:navy;'">Current version <b>2.3.0</b></p>
+<p style="color:navy;'">Current version <b>2.3.0 / 2.4.0</b></p>
 <table>
 <tr>
   <td valign="top"><b>Mobile version</b></td>
@@ -55,7 +55,7 @@ on Windows: use Alt + Enter keys combination for switching
      <tr>
        <td></td>
        <td>
-         <a href="https://github.com/luastudio/Release_And/releases/download/2.3.0/LuaStudio-release_v2_3_0.apk">LuaStudio-release_v2_3_0.apk</a>
+         <a href="https://github.com/luastudio/Release_And/releases/download/2.4.0/LuaStudio-release_v2_4_0.apk">LuaStudio-release_v2_4_0.apk</a>
        </td>
      </tr>
     </table>
