initial 2.5.0 version update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ on Mac: use default top left icon for full screen resizing<br/>
 on Windows: use Alt + Enter keys combination for switching 
 </p>
 
-<p style="color:navy;'">Current version <b>2.4.0</b></p>
+<p style="color:navy;'">Current version <b>2.4.0 / 2.5.0</b></p>
 <table>
 <tr>
   <td valign="top"><b>Mobile version</b></td>
@@ -55,7 +55,7 @@ on Windows: use Alt + Enter keys combination for switching
      <tr>
        <td></td>
        <td>
-         <a href="https://github.com/luastudio/Release_And/releases/download/2.4.0/LuaStudio-release_v2_4_0.apk">LuaStudio-release_v2_4_0.apk</a>
+         <a href="https://github.com/luastudio/Release_And/releases/download/2.5.0/LuaStudio-release_v2_5_0.apk">LuaStudio-release_v2_5_0.apk</a>
        </td>
      </tr>
     </table>
@@ -68,24 +68,24 @@ on Windows: use Alt + Enter keys combination for switching
     <table>
       <tr>
           <td>Mac OS 64-bit<td>
-          <td><a href="download/LuaStudio_v2_4_0_Mac.zip" target="_blank">LuaStudio_v2_4_0_Mac.zip</a></td>
+          <td><a href="download/LuaStudio_v2_5_0_Mac.zip" target="_blank">LuaStudio_v2_5_0_Mac.zip</a></td>
           <td>&nbsp;</td>
           <td>Mac OS JIT 64-bit<td>
-          <td><a href="download/LuaStudioJIT_v2_4_0_Mac.zip" target="_blank">LuaStudioJIT_v2_4_0_Mac.zip</a></td>         
+          <td><a href="download/LuaStudioJIT_v2_5_0_Mac.zip" target="_blank">LuaStudioJIT_v2_5_0_Mac.zip</a></td>         
       </tr>
       <tr>
           <td>Windows 32-bit<td>
-          <td><a href="download/LuaStudio_v2_4_0_Win_x86.zip" target="_blank">LuaStudio_v2_4_0_Win_x86.zip</a></td>
+          <td><a href="download/LuaStudio_v2_5_0_Win_x86.zip" target="_blank">LuaStudio_v2_5_0_Win_x86.zip</a></td>
           <td>&nbsp;</td>
           <td>Windows JIT 32-bit<td>
-          <td><a href="download/LuaStudioJIT_v2_4_0_Win_x86.zip" target="_blank">LuaStudioJIT_v2_4_0_Win_x86.zip</a></td>
+          <td><a href="download/LuaStudioJIT_v2_5_0_Win_x86.zip" target="_blank">LuaStudioJIT_v2_5_0_Win_x86.zip</a></td>
       </tr>
       <tr>
           <td>Windows 64-bit<td>
-          <td><a href="download/LuaStudio_v2_4_0_Win_x64.zip" target="_blank">LuaStudio_v2_4_0_Win_x64.zip</a></td>
+          <td><a href="download/LuaStudio_v2_5_0_Win_x64.zip" target="_blank">LuaStudio_v2_5_0_Win_x64.zip</a></td>
           <td>&nbsp;</td>
           <td>Windows JIT 64-bit<td>
-          <td><a href="download/LuaStudioJIT_v2_4_0_Win_x64.zip" target="_blank">LuaStudioJIT_v2_4_0_Win_x64.zip</a></td>
+          <td><a href="download/LuaStudioJIT_v2_5_0_Win_x64.zip" target="_blank">LuaStudioJIT_v2_5_0_Win_x64.zip</a></td>
       </tr>
     </table>
   </td>
