--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ on Mac: use default top left icon for full screen resizing<br/>
 on Windows: use Alt + Enter keys combination for switching 
 </p>
 
-<p style="color:navy;'">Current version <b>2.5.0</b></p>
+<p style="color:navy;'">Current version <b>2.5.0 / 2.6.0</b></p>
 <table>
 <tr>
   <td valign="top"><b>Mobile version</b></td>
@@ -55,7 +55,7 @@ on Windows: use Alt + Enter keys combination for switching
      <tr>
        <td></td>
        <td>
-         <a href="https://github.com/luastudio/Release_And/releases/download/2.5.0/LuaStudio-release_v2_5_0.apk">LuaStudio-release_v2_5_0.apk</a>
+         <a href="https://github.com/luastudio/Release_And/releases/download/2.6.0/LuaStudio-release_v2_6_0.apk">LuaStudio-release_v2_6_0.apk</a>
        </td>
      </tr>
     </table>
@@ -136,8 +136,8 @@ r.onData = function(s)fn=load(s) fn()end r.onError = print r.request(false)
 
 <p>
 <sup>*</sup> LuaStudio free for all purpose and distributed on AS IS basis with no warranty. You can use it on your own risk with no compensation for any damage or lost.<br/>
-<sup>**</sup> Lua 5.2 - Copyright &copy; 1994-2021 Lua.org, PUC-Rio.<br/>
-<sup>***</sup> LuaJIT 2.1.0-beta3 - Copyright &copy; 2005-2021 Mike Pall, released under the MIT open source license. 
+<sup>**</sup> Lua 5.2 - Copyright &copy; 1994-2022 Lua.org, PUC-Rio.<br/>
+<sup>***</sup> LuaJIT 2.1.0-beta3 - Copyright &copy; 2005-2022 Mike Pall, released under the MIT open source license. 
 </p>
 
 </body>
