--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Parameter <b>-a</b> and next two: <b>project_file_path</b> and <b>executable_lua
 <p>
 Full screen mode:<br/>
 on Mac: use default top left icon for full screen resizing<br/>
-on Windows: use Alt + Enter keys combination for switching 
+on Windows: use Alt + Enter keys combination for switching (Warning: Some antiviruses can recognize full screen entering as dangerous behaviour and take actions)
 </p>
 
 <p style="color:navy;'">Current version <b>2.11.0</b></p>
