--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ on Mac: use default top left icon for full screen resizing<br/>
 on Windows: use Alt + Enter keys combination for switching (Warning: Some antiviruses can recognize full screen entering as dangerous behaviour and take actions)
 </p>
 
-<p style="color:navy;'">Current version <b>2.11.0</b></p>
+<p style="color:navy;'">Current version <b>2.12.0</b></p>
 <table>
 <tr>
   <td valign="top"><b>Mobile version</b></td>
@@ -55,7 +55,7 @@ on Windows: use Alt + Enter keys combination for switching (Warning: Some antivi
      <tr>
        <td></td>
        <td>
-         <a href="https://github.com/luastudio/Release_And/releases/download/2.11.0/LuaStudio-release_v2_11_0.apk">LuaStudio-release_v2_11_0.apk</a>
+         <a href="https://github.com/luastudio/Release_And/releases/download/2.12.0/LuaStudio-release_v2_12_0.apk">LuaStudio-release_v2_12_0.apk</a>
        </td>
      </tr>
     </table>
@@ -68,24 +68,24 @@ on Windows: use Alt + Enter keys combination for switching (Warning: Some antivi
     <table>
       <tr>
           <td>Mac OS 64-bit<td>
-          <td><a href="https://github.com/luastudio/Release_Mac_x64/releases/download/2.11.0/LuaStudio_v2_11_0_Mac.zip" target="_blank">LuaStudio_v2_11_0_Mac.zip</a></td>
+          <td><a href="https://github.com/luastudio/Release_Mac_x64/releases/download/2.12.0/LuaStudio_v2_12_0_Mac.zip" target="_blank">LuaStudio_v2_12_0_Mac.zip</a></td>
           <td>&nbsp;</td>
           <td>Mac OS JIT 64-bit<td>
-          <td><a href="https://github.com/luastudio/Release_Mac_JIT_x64/releases/download/2.11.0/LuaStudioJIT_v2_11_0_Mac.zip" target="_blank">LuaStudioJIT_v2_11_0_Mac.zip</a></td>         
+          <td><a href="https://github.com/luastudio/Release_Mac_JIT_x64/releases/download/2.12.0/LuaStudioJIT_v2_12_0_Mac.zip" target="_blank">LuaStudioJIT_v2_12_0_Mac.zip</a></td>         
       </tr>
       <tr>
           <td>Windows 32-bit<td>
-          <td><a href="https://github.com/luastudio/Release_Win_x86/releases/download/2.11.0/LuaStudio_v2_11_0_Win_x86.zip" target="_blank">LuaStudio_v2_11_0_Win_x86.zip</a></td>
+          <td><a href="https://github.com/luastudio/Release_Win_x86/releases/download/2.12.0/LuaStudio_v2_12_0_Win_x86.zip" target="_blank">LuaStudio_v2_12_0_Win_x86.zip</a></td>
           <td>&nbsp;</td>
           <td>Windows JIT 32-bit<td>
-          <td><a href="https://github.com/luastudio/Release_Win_JIT_x86/releases/download/2.11.0/LuaStudioJIT_v2_11_0_Win_x86.zip" target="_blank">LuaStudioJIT_v2_11_0_Win_x86.zip</a></td>
+          <td><a href="https://github.com/luastudio/Release_Win_JIT_x86/releases/download/2.12.0/LuaStudioJIT_v2_12_0_Win_x86.zip" target="_blank">LuaStudioJIT_v2_12_0_Win_x86.zip</a></td>
       </tr>
       <tr>
           <td>Windows 64-bit<td>
-          <td><a href="https://github.com/luastudio/Release_Win_x64/releases/download/2.11.0/LuaStudio_v2_11_0_Win_x64.zip" target="_blank">LuaStudio_v2_11_0_Win_x64.zip</a></td>
+          <td><a href="https://github.com/luastudio/Release_Win_x64/releases/download/2.12.0/LuaStudio_v2_12_0_Win_x64.zip" target="_blank">LuaStudio_v2_12_0_Win_x64.zip</a></td>
           <td>&nbsp;</td>
           <td>Windows JIT 64-bit<td>
-          <td><a href="https://github.com/luastudio/Release_Win_JIT_x64/releases/download/2.11.0/LuaStudioJIT_v2_11_0_Win_x64.zip" target="_blank">LuaStudioJIT_v2_11_0_Win_x64.zip</a></td>
+          <td><a href="https://github.com/luastudio/Release_Win_JIT_x64/releases/download/2.12.0/LuaStudioJIT_v2_12_0_Win_x64.zip" target="_blank">LuaStudioJIT_v2_12_0_Win_x64.zip</a></td>
       </tr>
     </table>
   </td>
@@ -104,7 +104,7 @@ on Windows: use Alt + Enter keys combination for switching (Warning: Some antivi
   <td valign="top"><b>Exporter</b></td>
   <td width="3">&nbsp;</td>
   <td>
-    <a href="https://github.com/luastudio/Exporter/releases/download/22.0/Exporter_v22_0.luastudio" target="_blank">Exporter_v22_0.luastudio</a> (111MB)
+    <a href="https://github.com/luastudio/Exporter/releases/download/23.0/Exporter_v23_0.luastudio" target="_blank">Exporter_v23_0.luastudio</a> (112MB)
   </td>
 </tr>
 <tr>
@@ -114,14 +114,14 @@ on Windows: use Alt + Enter keys combination for switching (Warning: Some antivi
     This project can export any LuaStudio projects to standalon app directly or to native target projects.<br/>
     Available targets:<br/>
     1 - android gradle / importable to android studio<br/>
-    2 - xcode iOS (based on v14.2)<br/>
+    2 - xcode iOS (based on v14.3)<br/>
     3 - standalon windows (+JIT)<br/>
     4 - standalon mac os (+JIT)<br/>
     Install(copy) Exporter project to user document folder on your device. Location to this folder can be printed from Lua code: <b>print(Lib.Media.FileSystem.File.documentsDirectory.nativePath)</b><br/>
     As an option, simply run script:<br/>
     <code>
-r = Lib.Sys.Net.Http.new( "https://raw.githubusercontent.com/luastudio/Exporter/main/Exporter_v22_0_installer.lua" )
-r.onData = function(s)fn=load(s) fn()end r.onError = print r.request(false)
+r = Lib.Sys.Net.Http.new( "https://raw.githubusercontent.com/luastudio/Exporter/main/Exporter_installer.lua" )
+r.onData = function(s)fn=load(s) fn("23.0")end r.onError = print r.request(false)
     </code>
   </td>
 </tr>
